# binder-project

./:  DOCX编辑模式开发计划.md  # AI样式子集技术分析报告.md  .eslintrc.json  .gitignore  AI三层架构设计文档.md  AI功能三层架构设计.md  AI聊天窗口完整开发方案.md  AI聊天窗口引用功能完整技术方案.md  API配置指南.md  Binder产品开发方案.md  Binder产品需求文档.md  CLAUDE.md  CODEX.md  DOCX编辑模式开发方案.md  DOCX编辑模式样式处理方案.md  README.md  deploy_lo.sh  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  修复说明.md  工具调用功能技术报告.md  快速配置APIKey.txt  查看日志.sh  查看日志说明.md  流式响应丢失chunks问题分析和修复.md  流式响应只有两个字问题分析.md  流式响应简化总结.md  流式响应简化方案.md  流式响应重构完成总结.md  流式响应问题修复总结.md  流式响应问题修复总结v2.md  流式响应问题完整解决方案.md  第一阶段实现评估报告.md  第三阶段开发完成情况检查.md  第三阶段开发计划.md  第四阶段开发计划.md  自动续写功能完整解决方案.md  (+3 more)
src-tauri/: .taurignore  Cargo.toml  create_icon.sh  tauri.conf.json  寓言故事.md
src-tauri/.binder/: workspace.db
src-tauri/capabilities/: main.json
src-tauri/resources/: complex_reference.docx  generate_complex_template.py  preserve-styles.lua  reference.docx  reference_template.md  创建参考文档说明.md
src-tauri/src/: main.rs
src-tauri/src/commands/: ai_commands.rs  classifier_commands.rs  file_commands.rs  image_commands.rs  knowledge_commands.rs  memory_commands.rs  mod.rs  positioning_snapshot.rs  search_commands.rs  template_commands.rs  tool_commands.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: ai_config.rs  ai_error.rs  ai_queue.rs  ai_service.rs  api_key_manager.rs  block_tree_index.rs  column_service.rs  confirmation_manager.rs  context_manager.rs  conversation_manager.rs  diff_service.rs  document_analysis.rs  exception_handler.rs  file_classifier.rs  file_system.rs  file_tree.rs  file_watcher.rs  image_service.rs  libreoffice_service.rs  loop_detector.rs  memory_service.rs  mod.rs  pandoc_service.rs  positioning_resolver.rs  preview_service.rs  reply_completeness_checker.rs  search_service.rs  stage_transition_guard.rs  stream_state.rs  streaming_response_handler.rs  task_progress_analyzer.rs  textbox_service.rs  tool_call_handler.rs  tool_definitions.rs  tool_matrix.rs  tool_policy.rs  tool_service.rs  workspace.rs
src-tauri/src/services/ai_providers/: deepseek.rs  mod.rs  openai.rs
src-tauri/src/services/knowledge/: chunker.rs  ingestion_service.rs  lifecycle_service.rs  mod.rs  query_service.rs  recovery_service.rs  repository.rs  source_adapter.rs  types.rs
src-tauri/src/services/template/: mod.rs  service.rs  types.rs
src-tauri/src/utils/: error_helpers.rs  logger.rs  mod.rs  path_validator.rs
src-tauri/src/workspace/: canonical_html.rs  canonical_service.rs  diff_engine.rs  mod.rs  timeline_support.rs  workspace_commands.rs  workspace_db.rs
(+588 files in other folders)
