[package]
name = "binder"
version = "0.1.0"
description = "Binder（合页）- AI 智能办公套件"
authors = ["Binder Team"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json", "stream"] }
keyring = "2.0"
notify = "6.0"
dirs = "5.0"
which = "5.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.22.1"
rusqlite = { version = "0.31", features = ["bundled"] }
walkdir = "2.4"
regex = "1.10"
zip = "0.6"
quick-xml = { version = "0.31", features = ["serialize"] }
sha2 = "0.10"
once_cell = "1.19"
image = "0.24"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
custom-protocol = ["tauri/custom-protocol"]

